--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <!-- un ordered list -->
                 <ul> 
                     <!-- list item -->
-                    <li>Home</li>
+                    <li>dog</li>
                     <li>About</li>
                     <li>Contact</li>
                     <li>Map</li>
